--- a/Project_Webpage_Yourself/Mainframe.html
+++ b/Project_Webpage_Yourself/Mainframe.html
@@ -6,6 +6,8 @@
 <link rel="stylesheet" type="text/css" href="styles.css" >
 <link rel="stylesheet" type="text/css" href="sidebars.css" >
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+<script src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js" charset="utf-8"></script>
 
 <style>
   .b-example-divider {
@@ -64,7 +66,7 @@
   <header class="p-3 mb-3 border-bottom">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <a href="index.html"><img src ="img/beaver_logo.png" width = "45" height = "35"></a>
+        <a href="index_main.html"><img src ="img/beaver_logo.png" width = "45" height = "35"></a>
         <div class="blank">df</div>
         <span class="fs-4" style="font-family: Rockwell; font-weight:bolder; font-size: 100px; text-decoration: underline;">Yoursel<i>f</i></span>
 
@@ -109,8 +111,8 @@
         
         <div class="content">
             <h1>나의 강의실</h1> 
-            <div class="textbox">
-                여기에 글을 쓰시오.
+            <div src = "test.html">
+                
 
             <div class="blank">dfdf</div>
             <div class="blank">dfdf</div>
@@ -166,7 +168,7 @@
               <li><a href="https://www.desmos.com/scientific?lang=ko" target="_blank" rel="noopener noreferrer" class="link-dark d-inline-flex text-decoration-none rounded">계산기</a></li>
               <li><a href="https://n.lrl.kr/" target="_blank" rel="noopener noreferrer" class="link-dark d-inline-flex text-decoration-none rounded">메모장</a></li>
               <li><a href="https://dict.naver.com/" target="_blank" rel="noopener noreferrer" class="link-dark d-inline-flex text-decoration-none rounded">사전</a></li>
-              <li><a href="https://online-stopwatch.org/" target="_blank" rel="noopener noreferrer" class="link-dark d-inline-flex text-decoration-none rounded">스탑워치 & 타이머</a></li>
+              <li><a href="stopwatch.html" target="_blank" rel="noopener noreferrer" class="link-dark d-inline-flex text-decoration-none rounded">스탑워치 & 타이머</a></li>
               <li><a href="https://drive.google.com/drive/u/0/my-drive" target="_blank" rel="noopener noreferrer" class="link-dark d-inline-flex text-decoration-none rounded">Google Drive</a></li>
               <li><a href="https://meet.google.com/?hs=197&authuser=0&pli=1" target="_blank" rel="noopener noreferrer" class="link-dark d-inline-flex text-decoration-none rounded">Google Meet</a></li>
             </ul>
@@ -197,10 +199,7 @@
   <div id="ft">
     <div id="footer"><center><a>2023 Hyerin Choi, &nbspAll rights reserved</a></center></div>
   </div>
-  <div id="ft">
-    <div id="footer_m"></div>
-  </div>
-</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
